--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -615,6 +615,8 @@
               href: app/remove-application-insights.md
         - name: コード不要の監視
           items:
+            - name: 概要
+              href: app/codeless-overview.md
             - name: Azure VM とスケール セット
               href: app/azure-vm-vmss-apps.md
             - name: Azure App Service
