--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -17,11 +17,11 @@
       href: cognitive-services-apis-create-account.md
     - name: Azure CLI を使用して新しいリソースを作成する
       href: cognitive-services-apis-create-account-cli.md
-    - name: 診断ログ
-      href: diagnostic-logging.md
-    - name: ARM テンプレート
+    - name: ARM テンプレートを使用して新しいリソースを作成する
       displayName: Resource Manager
       href: resource-manager-template.md
+    - name: 診断ログ
+      href: diagnostic-logging.md
 - name: サンプル
   items:
     - name: Azure Policy の組み込み
