--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -225,6 +225,8 @@
       href: 'https://azure.microsoft.com/resources/samples/?service=active-directory'
     - name: Azure PowerShell コマンドレット
       href: /powershell/azure/overview
+    - name: Microsoft Graph REST API ベータ版
+      href: /graph/api/resources/authenticationmethods-overview?view=graph-rest-beta
     - name: サービスの制限と制約
       href: ../users-groups-roles/directory-service-limits-restrictions.md
 - name: リソース
