--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -21,6 +21,8 @@
       href: front-door-tutorial-geo-filtering.md
     - name: ルール エンジンを設定する
       href: front-door-tutorial-rules-engine.md
+    - name: ルール エンジンを使用してセキュリティ ヘッダーを追加する
+      href: front-door-security-headers.md
     - name: Web アプリケーション ファイアウォールと Front Door
       href: front-door-waf.md
 - name: サンプル
