--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 05/20/2020
-  ms.openlocfilehash: 4d7c02891330699978134dbb4d53faef0f16b1e9
-  ms.sourcegitcommit: 0fa52a34a6274dc872832560cd690be58ae3d0ca
+  ms.date: 06/16/2020
+  ms.openlocfilehash: d3a25af9f7d8e16fbb008fd84aff6e29c57680da
+  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/29/2020
-  ms.locfileid: "84204822"
+  ms.lasthandoff: 06/24/2020
+  ms.locfileid: "85321949"
 landingContent:
 - title: Azure Policy について
   linkLists:
@@ -129,9 +129,9 @@ landingContent:
       url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
     - text: Azure SDK for .NET (ポリシーの定義)
       url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
-    - text: Azure SDK for Node (ポリシー)
+    - text: Azure SDK for JavaScript (ポリシー)
       url: /javascript/api/@azure/arm-policy
-    - text: Azure SDK for Node (ポリシーの分析情報)
+    - text: Azure SDK for JavaScript (ポリシーの分析情報)
       url: /javascript/api/@azure/arm-policyinsights
     - text: Azure SDK for Python (ポリシー)
       url: /python/api/azure-mgmt-resource/azure.mgmt.resource.policy
