commit translated contents

--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -92,6 +92,9 @@
           href: custom-roles-cli.md
         - name: REST API
           href: custom-roles-rest.md
+        - name: ARM テンプレート
+          displayName: Resource Manager
+          href: custom-roles-template.md
     - name: アクティビティ ログを表示する
       href: change-history-report.md
     - name: アクセス権を昇格する
@@ -107,7 +110,7 @@
     - name: リソース プロバイダー操作
       href: resource-provider-operations.md
     - name: Azure RBAC の制限
-      href: '../azure-resource-manager/management/azure-subscription-service-limits.md#role-based-access-control-limits'
+      href: ../azure-resource-manager/management/azure-subscription-service-limits.md#role-based-access-control-limits
     - name: Azure PowerShell
       href: /powershell/module/az.resources
     - name: Azure CLI
