--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -29,13 +29,13 @@
               href: QuickStarts/python-analyze.md
         - name: ローカル画像の分析
           items:
-            - name: 'C#'
+            - name: C#
               href: QuickStarts/CSharp-analyze.md
             - name: Python
               href: QuickStarts/python-disk.md
         - name: サムネイルの生成
           items:
-            - name: 'C#'
+            - name: C#
               href: QuickStarts/CSharp-thumb.md
             - name: cURL
               href: QuickStarts/curl-thumb.md
@@ -51,7 +51,7 @@
               href: QuickStarts/python-thumb.md
         - name: テキストの抽出 (Computer Vision - Read API)
           items:
-            - name: 'C#'
+            - name: C#
               href: QuickStarts/CSharp-hand-text.md
             - name: Java
               href: QuickStarts/java-hand-text.md
@@ -61,7 +61,7 @@
               href: QuickStarts/python-hand-text.md
         - name: 印刷されたテキストの抽出 (OCR)
           items:
-            - name: 'C#'
+            - name: C#
               href: QuickStarts/CSharp-print-text.md
             - name: cURL
               href: QuickStarts/curl-print-text.md
@@ -105,7 +105,7 @@
       href: concept-detecting-color-schemes.md
     - name: スマート トリミングされたサムネイル
       href: concept-generating-thumbnails.md
-    - name: 印刷されたテキストと手書きのテキストの認識
+    - name: テキストの認識
       href: concept-recognizing-text.md
     - name: 成人向けコンテンツの検出
       href: concept-detecting-adult-content.md
