--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -8,6 +8,12 @@
       href: azure-portal-quickstart-center.md
     - name: サポートされているブラウザーとデバイス
       href: azure-portal-supported-browsers-devices.md
+- name: クイックスタート
+  items:
+    - name: ポータルで VM を作成する
+      href: ../virtual-machines/windows/quick-create-portal.md?toc=/azure/azure-portal/toc.json&bc=/azure/azure-portal/breadcrumb/toc.json
+    - name: ダッシュボードを作成する - Resource Manager テンプレート
+      href: quick-create-template.md
 - name: 概念
   items:
     - name: ロールベースのアクセス制御を使用したダッシュボードの共有
