--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -30,7 +30,9 @@
       href: concepts-identity.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
-    - name: AVS VM の API Management
+    - name: ハブとスポークの統合
+      href: concepts-avs-hub-and-spoke-integration.md
+    - name: API Management
       href: concepts-api-management.md
 - name: 操作方法ガイド
   items:
@@ -40,8 +42,6 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
-    - name: AVS のデプロイまたはプロビジョニングのエラーに関するヘルプを表示する
-      href: fix-deployment-provisioning-failures.md
     - name: AVS 向けの Azure Backup Server
       items:
         - name: AVS 向けに Azure Backup Server を設定する
@@ -52,5 +52,9 @@
   items: null
 - name: リソース
   items:
+    - name: トラブルシューティング
+      items:
+        - name: AVS のデプロイまたはプロビジョニングのエラーに関するヘルプを表示する
+          href: fix-deployment-provisioning-failures.md
     - name: よく寄せられる質問
       href: faq.md
