--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 7e444b27d701b3b7ff143a404c4210f9123767b4
-  ms.sourcegitcommit: f98ab5af0fa17a9bba575286c588af36ff075615
+  ms.openlocfilehash: 6edc39bc9923d53732775c68c9b7fe4f2d35b055
+  ms.sourcegitcommit: fdaad48994bdb9e35cdd445c31b4bac0dd006294
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/25/2020
-  ms.locfileid: "85362528"
+  ms.lasthandoff: 06/26/2020
+  ms.locfileid: "85414387"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -68,7 +68,7 @@ productDirectory:
     azureCategories:
     - ai-machine-learning
     - analytics
-    url: azure-databricks/index.yml
+    url: /azure/databricks/index.yml
   - title: Azure Machine Learning
     summary: 実験とモデル管理ができる、エンドツーエンドのスケーラブルで信頼性の高いプラットフォームで、すべてのユーザーが AI を使えるようにする
     imageSrc: https://static.docs.com/ui/media/product/azure/machine-learning.svg
