--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -147,7 +147,7 @@
               href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 認証
       items:
-        - name: オンプレミスの認証と承認の有効化
+        - name: オンプレミスの AD DS 認証と承認の有効化
           items:
             - name: AD DS の概要
               href: storage-files-identity-auth-active-directory-enable.md
