--- a/articles/key-vault/secrets/index.yml
+++ b/articles/key-vault/secrets/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 9c85db09e3c744b09380b34daefdb253b910d889
-  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
+  ms.openlocfilehash: 96ea2c2091702840e5c66f2071b6180185f2f7cf
+  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81423430"
+  ms.lasthandoff: 06/27/2020
+  ms.locfileid: "85482821"
 landingContent:
 - title: シークレット
   linkLists:
@@ -46,8 +46,10 @@ landingContent:
   linkLists:
   - linkListType: tutorial
     links:
-    - text: シングルユーザー リソースのシークレットのローテーション
+    - text: シングル資格情報リソースのシークレットのローテーション
       url: tutorial-rotation.md
+    - text: デュアル資格情報リソースのシークレットのローテーション
+      url: tutorial-rotation-dual.md
     - text: Linux VM と .NET アプリを使用してシークレットを格納する
       url: tutorial-net-linux-virtual-machine.md
     - text: Linux VM と Python アプリを使用してシークレットを格納する
