--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -23,14 +23,15 @@
       href: quick-create-python.md
     - name: Java
       href: quick-create-java.md
-    - name: Azure Resource Manager テンプレート
+    - name: ARM テンプレート
+      displayName: Resource Manager
       href: quick-create-template.md
 - name: チュートリアル
   items:
     - name: ローテーション
       items:
-        - name: エンド ツー エンドのキー ローテーションと監査を設定する
-          href: key-rotation-log-monitoring.md
+        - name: デュアル資格情報ローテーションのチュートリアル
+          href: tutorial-rotation-dual.md
         - name: シングル ユーザーまたはパスワードのローテーションのチュートリアル
           href: tutorial-rotation.md
     - name: アプリケーションの統合
