--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -133,8 +133,8 @@
       items:
         - name: よく寄せられる質問
           href: faq.md
-        - name: B2B のサポートの利用
-          href: get-support.md
+        - name: サポートの利用
+          href: 'https://docs.microsoft.com/azure/active-directory/fundamentals/active-directory-troubleshooting-support-howto'
         - name: Azure フィードバック フォーラム
           href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
         - name: Azure のロードマップ
