--- a/articles/cognitive-services/immersive-reader/index.yml
+++ b/articles/cognitive-services/immersive-reader/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: IEvangelist
   ms.author: dapine
   ms.date: 01/23/2020
-  ms.openlocfilehash: 1cb7674dce24d696fd54f3d48074398dc484c01c
-  ms.sourcegitcommit: 309cf6876d906425a0d6f72deceb9ecd231d387c
+  ms.openlocfilehash: c02de94050b538307b26f93ed5323acfaacb0e2a
+  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/01/2020
-  ms.locfileid: "84267054"
+  ms.lasthandoff: 06/27/2020
+  ms.locfileid: "85483875"
 landingContent:
 - title: イマーシブ リーダーの概要
   linkLists:
@@ -61,6 +61,12 @@ landingContent:
       url: how-to-customize-launch-button.md
     - text: 認証トークンをキャッシュする
       url: how-to-cache-token.md
+    - text: 音声読み上げを構成する
+      url: how-to-configure-read-aloud.md
+    - text: 翻訳を構成する
+      url: how-to-configure-translation.md
+    - text: ユーザー設定を格納する
+      url: how-to-store-user-preferences.md
   - linkListType: reference
     links:
     - text: JavaScript SDK
